--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -36,6 +36,16 @@
     <%= form.select :filtertag_id, Filtertag.pluck(:name, :id) %>
   </div>
 
+  <div class="field">
+      <%= form.label :style_id %>
+      <%= form.select :style_id, Style.pluck(:name, :id) %>
+  </div>
+
+  <div class="field">
+    <%= form.label :brand_id %>
+    <%= form.select :brand_id, Brand.pluck(:name, :id) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
