--- a/app/assets/stylesheets/promo.scss
+++ b/app/assets/stylesheets/promo.scss
@@ -8,14 +8,21 @@
     font-style: normal;
     font-display: swap;
 }
-
+@font-face {
+    font-family: 'Pangram';
+    src: url('PPPangramSans-Medium.otf') format('OpenType');
+    // font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
 * {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-$Font: 'Halvar Breit Md', sans-serif;
+$Font: 'Pangram';
+$Fontaaa: 'Halvar Breit Md', sans-serif;
 @mixin font($s: 11px, $l: 24px, $mt: 67px) {
 font-size: $s;
 line-height: $l;
