--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,12 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Brands</h1>
+<div class="index_handb">
+  <h1>Бренды</h1>
+  <%= link_to 'Создать', new_brand_path, :class =>"link_new" %>
+</div>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Link</th>
+      <th class="table1">Название</th>
+      <th>Ссылка</th>
+      <th>Дата обновления</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,16 +18,18 @@
   <tbody>
     <% @brands.each do |brand| %>
       <tr>
-        <td><%= brand.name %></td>
-        <td><%= brand.link %></td>
-        <td><%= link_to 'Show', brand %></td>
-        <td><%= link_to 'Edit', edit_brand_path(brand) %></td>
-        <td><%= link_to 'Destroy', brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="font24 table1"><%= brand.name %></td>
+        <td class="font20 brand_link"><%= link_to "Перейти на товар", brand.link, :target => "_blank" %></td>
+        <td class="font20"><%= brand.updated_at %></td>
+
+        <td class="user_view user_view2"><%= link_to image_tag('show.svg'), brand %></td>
+        <% if user_signed_in? && current_user.isadmin == true %>
+          <td class="user_view"><%= link_to image_tag('edit.svg'), edit_brand_path(brand)%></td>
+          <td class="user_view"><%= link_to image_tag('destroy.svg'), brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Brand', new_brand_path %>
