--- a/app/views/cloths/index.html.erb
+++ b/app/views/cloths/index.html.erb
@@ -1,28 +1,38 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Cloths</h1>
+<div class="index_handb">
+  <h1>Предметы одежды</h1>
+  <%= link_to 'Создать', new_cloth_path, :class =>"link_new" %>
+</div>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th></th>
+      <th>Название</th>
+      <th>Создатель</th>
+      <th>Дата обновления</th>
       <th colspan="3"></th>
+
     </tr>
   </thead>
 
   <tbody>
     <% @cloths.each do |cloth| %>
       <tr>
-        <td><%= cloth.name %></td>
-        <td><%= cloth.artist.name %></td>
-        <td><%= link_to 'Show', cloth %></td>
-        <td><%= link_to 'Edit', edit_cloth_path(cloth) %></td>
-        <td><%= link_to 'Destroy', cloth, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="table1"><%= link_to(image_tag(cloth.clothimage.thumb.url, alt: 'Image'), cloth.clothimage.url, target: '_blank') if cloth.clothimage? %></td>
+        <td class="font24 "><%= cloth.name %></td>
+        <td class="font20"><%= cloth.artist.name %></td>
+        <td class="font20"><%= cloth.updated_at %></td>
+        <td><%= link_to image_tag('show.svg'), cloth %></td>
+        <% if user_signed_in? && current_user.isadmin == true %>
+          <td><%= link_to image_tag('edit.svg'), edit_cloth_path(cloth)  %></td>
+          <td><%= link_to image_tag('destroy.svg'), cloth, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Cloth', new_cloth_path %>
