--- a/app/views/filtertags/index.html.erb
+++ b/app/views/filtertags/index.html.erb
@@ -1,13 +1,18 @@
 <p id="notice"><%= notice %></p>
+<div class="index_handb">
+  <h1>Фильтр-тэги</h1>
+  <% if user_signed_in? && current_user.isadmin == true %>
+    <%= link_to 'Создать', new_filtertag_path, :class =>"link_new" %>
+  <% end %>
+</div>
 
-<h1>Filtertags</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Display in navbar</th>
+      <th class="table1">Название</th>
+      <th>Создатель</th>
+      <th>Дата обновления</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,16 +20,17 @@
   <tbody>
     <% @filtertags.each do |filtertag| %>
       <tr>
-        <td><%= filtertag.name %></td>
-        <td><%= filtertag.display_in_navbar %></td>
-        <td><%= link_to 'Show', filtertag %></td>
-        <td><%= link_to 'Edit', edit_filtertag_path(filtertag) %></td>
-        <td><%= link_to 'Destroy', filtertag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="font24 table1"><%= filtertag.name %></td>
+        <td class="font20"><%= filtertag.user.username %></td>
+        <td class="font20"><%= filtertag.updated_at %></td>
+        <td class="user_view user_view2"><%= link_to image_tag('show.svg'), filtertag %></td>
+        <% if user_signed_in? && current_user.isadmin == true %>
+          <td class="user_view"><%= link_to image_tag('edit.svg'), edit_filtertag_path(filtertag)%></td>
+          <td class="user_view"><%= link_to image_tag('destroy.svg'), filtertag, method: :delete, data: { confirm: 'Are you sure?' }%></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Filtertag', new_filtertag_path %>
