--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,11 +1,16 @@
 <p id="notice"><%= notice %></p>
+<div class="index_handb">
+  <h1>Стили одежды</h1>
+  <%= link_to 'Создать', new_style_path, :class =>"link_new" %>
+</div>
 
-<h1>Styles</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th class="table1">Название</th>
+      <th>Создатель</th>
+      <th>Дата обновления</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,15 +18,18 @@
   <tbody>
     <% @styles.each do |style| %>
       <tr>
-        <td><%= style.name %></td>
-        <td><%= link_to 'Show', style %></td>
-        <td><%= link_to 'Edit', edit_style_path(style) %></td>
-        <td><%= link_to 'Destroy', style, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="font24 table1"><%= style.name %></td>
+        <td class="font20"><%= style.user.username %></td>
+        <td class="font20"><%= style.updated_at %></td>
+
+        <td class="user_view user_view2"><%= link_to image_tag('show.svg'), style %></td>
+        <% if user_signed_in? && current_user.isadmin == true %>
+          <td class="user_view"><%= link_to image_tag('edit.svg'), edit_style_path(style)%></td>
+          <td class="user_view"><%= link_to image_tag('destroy.svg'), style, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Style', new_style_path %>
