--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -1,11 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Types</h1>
+<div class="index_handb">
+  <h1>Категории статей</h1>
+  <%= link_to 'Создать', new_type_path, :class =>"link_new" %>
+</div>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th class="table1">Название</th>
+      <th>Дата обновления</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,15 +17,18 @@
   <tbody>
     <% @types.each do |type| %>
       <tr>
-        <td><%= type.name %></td>
-        <td><%= link_to 'Show', type %></td>
-        <td><%= link_to 'Edit', edit_type_path(type) %></td>
-        <td><%= link_to 'Destroy', type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="font24 table1"><%= type.name %></td>
+        <td class="font20"><%= type.updated_at %></td>
+
+        <td class="user_view user_view2"><%= link_to image_tag('show.svg'), type %></td>
+        <% if user_signed_in? && current_user.isadmin == true %>
+          <td class="user_view"><%= link_to image_tag('edit.svg'), edit_type_path(type)%></td>
+          <td class="user_view"><%= link_to image_tag('destroy.svg'), type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+        
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Type', new_type_path %>
