--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,33 @@
+<p id="notice"><%= notice %></p>
+
+<div class="index_handb">
+  <h1>Люди</h1>
+
+</div>
+
 <table>
   <thead>
     <tr>
-      <th>ID</th>
+      <th class="table1">ID</th>
       <th>Email</th>
-      <th>Username</th>
+      <th>Никнейм</th>
+      <th>Статус</th>
+      <th colspan="3"></th>
+
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.id %></td>
-        <td><%= link_to user.email, user %></td>
-        <td><%= user.username %></td>
+        <td class="font24 table1"><%= user.id %></td>
+        <td class="font20"><%= link_to user.email, user %></td>
+        <td class="font20"><%= user.username %></td>
+        <td class="font20"><%= user.isadmin %></td>
+        <td class="user_view"><%= link_to image_tag('show.svg'), user %></td>
       </tr>
+
+
     <% end %>
   </tbody>
 </table>
