--- a/app/views/cloths/show.html.erb
+++ b/app/views/cloths/show.html.erb
@@ -16,11 +16,16 @@
       <strong class="font24">Название:</strong>
       <strong class="c_extra_info_strong"><%= @cloth.name %></strong>
     </p>
+
     <p class="strong_title">
-      <strong class="font24">Принадлежит:</strong>
-      <strong class="f_extra_info_strong"><%= @cloth.artist.name %></strong>
+      <strong class="font24">Бренд:</strong>
+      <strong class="c_extra_info_strong"><%= @cloth.brand.name %></strong>
     </p>
 
+    <p class="strong_title">
+      <strong class="font24">Образ:</strong>
+      <strong class="c_extra_info_strong"><%= @cloth.look.title %></strong>
+    </p>
   </div>
 </div>
 
