--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,12 @@
     <p class="alert"><%= alert %></p>
   <% end %>
   <body>
-
+  <% if user_signed_in? && current_user.isadmin == true %>
     <div class="sidebar">
       <ul class="ul1">
         <li><%= link_to "Артисты", artists_path %></li>
         <li><%= link_to "Статьи", posts_path %></li>
+        <li><%= link_to "Образы", looks_path %></li>
         <li><%= link_to "Подборки", collections_path %></li>
         <li><%= link_to "Люди", users_path %></li>
       </ul>
@@ -32,6 +33,7 @@
         <li><%= link_to "Предметы одежды", cloths_path %></li>
       </ul>
     </div>
+  <% end %>
 
     <div class="menubar">
       <%= image_tag("logo.svg") %>
@@ -44,7 +46,7 @@
               <%= image_tag(current_user.avatar.thumb.url, alt: 'Image') if current_user.avatar? %>
               <%= link_to '', current_user %>
             </div>
-            
+
         <% else %>
           <%= link_to 'Войти', new_user_session_path, :class =>"link_new" %> | <%= link_to 'Регистрация', new_user_registration_path, :class =>"link_new" %>
         <% end %>
