--- a/app/views/looks/_form.html.erb
+++ b/app/views/looks/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+      <p class="p_form">В какой пост внести?</p>
+      <%= form.select :post_id, Post.pluck(:title, :id) %>
+  </div>
+
+  <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
