--- a/app/assets/stylesheets/M_SectionSwitcher.scss
+++ b/app/assets/stylesheets/M_SectionSwitcher.scss
@@ -1,6 +1,7 @@
 .switcher_container {
-  background-color: red;
+  background-color: #ccc;
   display: flex;
   list-style: none;
   justify-content: space-around;
+  margin-bottom: 50px;
 }
