--- a/app/views/filtertags/show.html.erb
+++ b/app/views/filtertags/show.html.erb
@@ -8,31 +8,4 @@
 
 </div>
 
-
-<div class="info_margin artist_extra_info ">
-  <div>
-    <p class="strong_title">
-      <strong class="font24">Название фильтра:</strong>
-      <strong class="f_extra_info_strong"><%= @filtertag.name%></strong>
-    </p>
-  </div>
-</div>
-
-<div class="user_link_edit filtertag_link_edit">
-
-  <% if user_signed_in? && current_user.isadmin == true %>
-    <div class="filtertag_link_edit_item filtertag_extra">
-      <%= link_to image_tag('edit.svg'), edit_filtertag_path(@filtertag) %>
-      <p>
-        <%= link_to 'Редактировать', edit_filtertag_path(@filtertag), :class =>"link_new link_new_user" %>
-      </p>
-    </div>
-    <div class="filtertag_link_edit_item">
-      <%= link_to image_tag('destroy.svg'), @filtertag, method: :delete, data: { confirm: 'Are you sure?' }%>
-      <p>
-        <%= link_to 'Удалить', @filtertag, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"link_new link_new_user" %>
-      </p>
-    </div>
-
-  <% end %>
-</div>
+<%= react_component 'M_filtertagview', { filtertag: @filtertag } %>
