ссылки на вещь, пытасюь сделать категории в образах

--- a/app/views/looks/index.html.erb
+++ b/app/views/looks/index.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 </div>
 
-<%= react_component 'O_AllLooks', { looks: @looks }  %>
+<%= react_component 'O_AllLooks', { looks: @looks, filtertags: @filtertags }  %>
 
 <table>
   <thead>
