--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,31 +34,32 @@
     </div>
   <% end %>
 
-    <!-- <div class="menubar">
 
 
-      <%= image_tag("logo.svg") %>
-      <div class="menubar_left">
-        <% if user_signed_in? %>
-            <%= link_to 'Выйти', destroy_user_session_path, method: :delete, :class =>"link_new" %>
-
-            <div class="avatar">
-
-              <%= image_tag(current_user.avatar.thumb.url, alt: 'Image') if current_user.avatar? %>
-              <%= link_to '', current_user %>
-            </div>
-
-        <% else %>
-          <%= link_to 'Войти', new_user_session_path, :class =>"link_new" %> | <%= link_to 'Регистрация', new_user_registration_path, :class =>"link_new" %>
-        <% end %>
-      </div>
-
-
-    </div> -->
 <div class="menubar">
   <%= react_component 'O_Header' %>
 </div>
+<div class="menubar">
 
+
+   <%= image_tag("logo.svg") %>
+   <div class="menubar_left">
+     <% if user_signed_in? %>
+         <%= link_to 'Выйти', destroy_user_session_path, method: :delete, :class =>"link_new" %>
+
+         <div class="avatar">
+
+           <%= image_tag(current_user.avatar.thumb.url, alt: 'Image') if current_user.avatar? %>
+           <%= link_to '', current_user %>
+         </div>
+
+     <% else %>
+       <%= link_to 'Войти', new_user_session_path, :class =>"link_new" %> | <%= link_to 'Регистрация', new_user_registration_path, :class =>"link_new" %>
+     <% end %>
+   </div>
+
+
+ </div>
 
     <%= react_component 'M_SectionSwitcher' %>
 
