--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 
-<%= react_component 'O_AllPosts', { posts: @posts }  %>
+<%= react_component 'O_AllArticles', { posts: @posts }  %>
 
 
 <table>
