--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -71,7 +71,7 @@
 
 <div class="artist_artists">
   <div class="artist_looks_title">
-    <h2>Образы артиста</h2>
+    <h2>Другие артисты</h2>
   </div>
 
   <%= react_component 'O_AllArtists', { artists: @artists }  %>
